infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: testifier.dev
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: testifier-srv
              servicePort: 8080
